Add GitHub Actions CI/CD pipeline + status badge

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
             <ul class="resume-list">
               <li>
                 <strong>M.S. Computer Science</strong><br />
-                New York University, 2024–present
+                University of Illinois, 2022–2024
               </li>
               <li>
                 <strong>B.E. / B.Tech Computer Science</strong><br />
-                2019–2023
+                SSN College of Engineering, 2018–2022
               </li>
             </ul>
           </div>
@@ -204,7 +204,7 @@
 
         <div class="resume-download">
           <!-- Link your actual resume PDF here -->
-          <a href="resume.pdf" class="btn" download>Download Full Resume (PDF)</a>
+          <a href="Raghuraman Resume .pdf" class="btn" download>Download Full Resume (PDF)</a>
         </div>
       </section>
 
@@ -246,7 +246,7 @@
         <div class="contact-box">
           <p>I'm always open to interesting conversations — research collabs, job opportunities, or just saying hi.</p>
           <div class="contact-links">
-            <a href="mailto:rv246@nyu.edu">rv246@nyu.edu</a>
+            <a href="mailto:rvenka26@uic.edu">rvenka26@uic.edu</a>
             <span>·</span>
             <a href="https://www.linkedin.com/in/raghuraman-v-96905013a" target="_blank" rel="noopener">LinkedIn</a>
             <span>·</span>
@@ -260,7 +260,16 @@
 
     <!-- ─── FOOTER ──────────────────────────────────────────────── -->
     <footer>
-      <p>© 2026 Raghuraman Venkatesh · Built with HTML & CSS</p>
+      <div class="footer-badges">
+        <a href="https://github.com/Raghu-Raman/Raghu-Raman.github.io/actions" target="_blank" rel="noopener">
+          <img
+            src="https://github.com/Raghu-Raman/Raghu-Raman.github.io/actions/workflows/deploy.yml/badge.svg"
+            alt="CI / Deploy pipeline status"
+            class="ci-badge"
+          />
+        </a>
+      </div>
+      <p>© 2026 Raghuraman Venkatesh · Built with HTML &amp; CSS · Deployed via GitHub Actions</p>
     </footer>
 
   </body>
