Fix all 15 HTML validation errors

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Raghuraman Venkatesh — Personal Profile" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Raghuraman Venkatesh — Personal Profile">
     <title>Raghuraman Venkatesh</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=Space+Mono:wght@400;700&amp;display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
@@ -34,7 +34,7 @@
           src="https://via.placeholder.com/160x160"
           alt="Raghuraman Venkatesh"
           class="avatar"
-        />
+        >
         <div class="hero-text">
           <h1>Raghuraman <span class="accent">Venkatesh</span></h1>
           <p class="tagline">
@@ -73,7 +73,6 @@
             <h3>Machine Learning</h3>
             <p>Transformers, vision models, efficient training, mechanistic interpretability.</p>
           </div>
-          </div>
           <div class="card">
             <div class="card-icon">🔬</div>
             <h3>Research implementations</h3>
@@ -96,7 +95,7 @@
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <span class="timeline-date">Dec 2024 – Present · Dallas, Texas</span>
-              <h3>Software Engineer II, AI R&D — Abbott Neuromodulation</h3>
+              <h3>Software Engineer II, AI R&amp;D — Abbott Neuromodulation</h3>
               <p>Engineered deep learning vision algorithms to compute 3D Human Pose Estimation from monocular monitored videos, collaborating with physicians to translate clinical observations of pain-induced movement into structured 3D data frameworks for quantitative biomarker development. Conducted comprehensive statistical analysis — t-tests, correlation coefficients, and longitudinal methods — to identify significant patterns in patient outcomes. Utilized 3D motion capture to characterize movement dynamics across amplitude, frequency, symmetry, and consistency dimensions. Deployed and managed AI models on GCP via Cloud Storage, AI Platform, and Cloud Run for on-demand and scheduled inference pipelines.</p>
             </div>
           </div>
@@ -123,7 +122,7 @@
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <span class="timeline-date">Jan 2023 – June 2024 · Chicago, IL</span>
-              <h3>Computer Vision Research Assistant — Motorola Mobility & UIC</h3>
+              <h3>Computer Vision Research Assistant — Motorola Mobility &amp; UIC</h3>
               <p>Redesigned the model architecture for on-device inference using quantization and pruning, reducing computational latency by 62% on mobile hardware while maintaining output fidelity. Optimized the memory footprint of an exposure fusion and low-light enhancement TFLite model from 2.5 GB to 1.4 GB (a 44% decrease). Innovated on data augmentation by creating 64 state-of-the-art blurs mimicking human hand-held motion, with directional blurs across exposure levels that reduced noise, figments, and artifacts. Conducted a large-scale ablation study on loss functions (SSIM, GAN, MS-SSIM, Fourier, Perceptual), ultimately achieving a 34% improvement on BRISQUE and 18% on NIQE for state-of-the-art image quality.</p>
             </div>
           </div>
@@ -173,7 +172,7 @@
           </div>
 
           <div class="resume-col">
-            <h3>Tools & Frameworks</h3>
+            <h3>Tools &amp; Frameworks</h3>
             <ul class="tag-list">
               <li>HuggingFace</li>
               <li>NumPy</li>
@@ -190,11 +189,11 @@
             <h3>Education</h3>
             <ul class="resume-list">
               <li>
-                <strong>M.S. Computer Science</strong><br />
+                <strong>M.S. Computer Science</strong><br>
                 University of Illinois, 2022–2024
               </li>
               <li>
-                <strong>B.E. / B.Tech Computer Science</strong><br />
+                <strong>B.E. / B.Tech Computer Science</strong><br>
                 SSN College of Engineering, 2018–2022
               </li>
             </ul>
@@ -266,7 +265,7 @@
             src="https://github.com/Raghu-Raman/Raghu-Raman.github.io/actions/workflows/deploy.yml/badge.svg"
             alt="CI / Deploy pipeline status"
             class="ci-badge"
-          />
+          >
         </a>
       </div>
       <p>© 2026 Raghuraman Venkatesh · Built with HTML &amp; CSS · Deployed via GitHub Actions</p>
