Update hobbies: YouTube, football, cricket, badminton, pickleball

--- a/index.html
+++ b/index.html
@@ -160,12 +160,11 @@
       <section id="hobbies">
         <h2 class="section-title">Hobbies</h2>
         <div class="hobbies-grid">
-          <div class="hobby"><span class="hobby-icon">♟️</span><p>Chess</p></div>
-          <div class="hobby"><span class="hobby-icon">📚</span><p>Reading</p></div>
-          <div class="hobby"><span class="hobby-icon">✈️</span><p>Traveling</p></div>
-          <div class="hobby"><span class="hobby-icon">✍️</span><p>Tech Blogging</p></div>
-          <div class="hobby"><span class="hobby-icon">🎵</span><p>Music</p></div>
-          <div class="hobby"><span class="hobby-icon">🏃</span><p>Running</p></div>
+          <div class="hobby"><span class="hobby-icon">📺</span><p>YouTube</p></div>
+          <div class="hobby"><span class="hobby-icon">⚽</span><p>Football</p></div>
+          <div class="hobby"><span class="hobby-icon">🏏</span><p>Cricket</p></div>
+          <div class="hobby"><span class="hobby-icon">🏸</span><p>Badminton</p></div>
+          <div class="hobby"><span class="hobby-icon">🥒</span><p>Pickleball</p></div>
         </div>
       </section>
 
