Add cooking to hobbies

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
           <div class="hobby"><span class="hobby-icon">🏏</span><p>Cricket</p></div>
           <div class="hobby"><span class="hobby-icon">🏸</span><p>Badminton</p></div>
           <div class="hobby"><span class="hobby-icon">🥒</span><p>Pickleball</p></div>
+          <div class="hobby"><span class="hobby-icon">🍳</span><p>Cooking</p></div>
         </div>
       </section>
 
